@@ -21,6 +21,8 @@ it is no longer required. The new default is now automatically set to the
 highest limit (which allows to create ~ 650 databases if the page size is
 set to 16kb).
 
+Many of these changes and fixes improved the performance.
+
 The file format of 2.1.5 is compatible to 2.1.4 and will most likely remain
 stable for the next few releases.
 
@@ -34,8 +36,10 @@ New Features
 
 Bugfixes
 * Fixed several regressions that crept in when 2.1.4 was released
-* Bugfix: if a Database is closed in an in-memory Environment, the Database
+* If a Database is closed in an in-memory Environment, the Database
 	name was still occupied and the Database could not be re-created.
+* Cache purges always purged one page only; now purges as many as
+	required
 
 Other Changes
 * The freelist was replaced and scales much better now
